fix alignment of cookie consent label

--- a/assets/scss/partials/_content-area.scss
+++ b/assets/scss/partials/_content-area.scss
@@ -63,7 +63,8 @@
 			display: block;
 			margin-right: 12px;
 
-			&[for="subscribe"] {
+			&[for="subscribe"],
+			&[for="wp-comment-cookies-consent"] {
 				display: inline-block;
 			}
 		}
